--- a/DataStructure/DataStructure.vcxproj.filters
+++ b/DataStructure/DataStructure.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="chapter5_stack.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="chapter7_tree.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
